# graphql-examples

./: .gitignore  LICENSE  README.md  compose-angular-csharp.yaml  compose-angular-rust.yaml  graphql.config.yml
.github/workflows/: build.yaml
backend/c#/: Dockerfile  Program.cs  graphql-examples.sln
backend/c#/Models/: IProduct.cs  Product.cs  StaticDataSource.cs
backend/c#/Schema/: MutationType.cs  ProductContextType.cs  SubscriptionType.cs
backend/c#/Schema/Types/: AllProductTypes.cs  CategoryType.cs  ProductInBackorderType.cs  ProductInTransitType.cs
backend/c#/helpers/: ManagerUser.cs
backend/rust/: Dockerfile
backend/rust/src/: main.rs  staticdata.rs
backend/rust/src/model/: backorder.rs  categorie.rs  intransit.rs  mod.rs  product.rs  productrelay.rs
backend/rust/src/schema/: mod.rs  mutation.rs  query.rs  relaytypes.rs  scalars.rs  subscription.rs
backend/rust/supply-chain/: config.toml
frontend/angular/: .dockerignore  Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/angular/src/app/: app-routing.module.ts  app.component.html  app.component.ts
frontend/angular/src/app/client/: client.component.ts
frontend/angular/src/app/manager/: manager.component.html  manager.component.ts
frontend/angular/src/app/models/: basketEvents.graphql  buyproduct.graphql  generated-clientHelpers.ts  generated-operations.ts  getproducts.graphql  localschema.graphqls  managerActions.graphql
frontend/angular/src/app/products/: products.component.html  products.component.ts
frontend/rust-web/src/: main.rs  schema.graphqls
frontend/rust-web/src/models/: getManagerProducts.graphql  getbasket.rs  getproducts.graphql  managerActionsCancel.graphql  managerActionsRestock.graphql
frontend/rust-web/src/views/: productlist.rs
shared/types/src/: lib.rs
shared/types/tests/: validations.rs
shared/types/tests/features/email/: validation.feature
src/: compose-angular-csharp.yaml  compose-angular-rust.yaml
src/backend/: graphql-examples.sln
src/backend/c#/: Dockerfile  GraphQLServer.csproj  Program.cs  graphql-examples.sln
src/backend/c#/Models/: Category.cs  ProductInBackorder.cs  ProductInTransit.cs
src/backend/c#/Models/ValueTypes/: EmailAddress.cs
src/backend/c#/Properties/: launchSettings.json
src/backend/c#/Schema/: Domain.cs  QueryType.cs
src/backend/c#/Schema/Interfaces/: ProductTypeInterface.cs  (+1 more)
src/backend/rust/: Cargo.toml  Dockerfile
src/backend/rust/src/: main.rs  mutation.rs  product.rs  relaytypes.rs  schema.rs  staticdata.rs
src/backend/rust/src/model/: backorder.rs  categorie.rs  intransit.rs  mod.rs  product.rs  productrelay.rs
src/backend/rust/src/products/: backorder.rs  intransit.rs  mod.rs  product.rs
src/backend/rust/src/schema/: mod.rs  mutation.rs  query.rs  relaytypes.rs  scalars.rs  subscription.rs
src/frontend/angular/: .dockerignore  Dockerfile  README.md  codegen.yml  karma.conf.js  nginx.conf
src/frontend/angular/src/: index.html
src/frontend/rust-web/: Cargo.toml  Dioxus.toml  Dockerfile  build.rs
src/frontend/rust-web/src/: main.rs  schema.graphqls  schema.rs
src/frontend/rust-web/src/controls/: bootstrap.rs
src/frontend/rust-web/src/models/: basketEvents.graphql  basketEvents.rs  buyproduct.graphql  buyproduct.rs  getManagerProducts.graphql  getManagerProducts.rs  getProduct.graphql  getbasket.graphql  getbasket.rs  getproduct.rs  getproducts.rs  managerActions.rs  managerActionsDeliver.graphql  mod.rs
src/frontend/rust-web/src/views/: basket.rs  manager.rs  mod.rs  productdetails.rs  productlist.rs
src/shared/types/: Cargo.toml
src/shared/types/src/: lib.rs
src/shared/types/tests/: validations.rs
src/shared/types/tests/features/email/: validation.feature
(+15 files in other folders)
