[package]
name = "graphql-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper =  "0.16.0"
juniper_warp = "0.8.0"
tokio =  { version = "1.37.0", features = ["full"] }
warp = "0.3.6"
log = { version = "0.4", optional = true }
env_logger = "0.11.3"
uuid = { version = "1.8.0" , features = [ "v4" ]}
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws"] }
help = "0.0.0"
