[package]
name = "rust-web"
version = "0.1.0"
authors = ["Marco Fuykschot <marcof@titaniumit.nl>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["web", "router"] }


# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
serde = "1.0.204"
graphql_client = { version = "0.14.0" , features = [ "reqwest"]}
reqwest ={ version = "*"}

[dev-dependencies]
