[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
regex = "1.10.5"

[dev-dependencies]
cucumber =  "0.21.1" 
futures = "0.3"

[[test]]
name = "validations" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest